Sutter Health/src/objects/S3_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Recurrance__c</fullName>
        <description>Tracks the frequency of the report out.</description>
        <inlineHelpText>How often is this report distributed?</inlineHelpText>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>As Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Dashboard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Dashboard</label>
        <referenceTo>S3_Reporting__c</referenceTo>
        <relationshipLabel>S3 Reports</relationshipLabel>
        <relationshipName>S3_Reports_Other_Dashboards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <label>Report or Dashboard Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SPM_Effort__c</fullName>
        <description>Tracks time spent on the dashboard for resource planning purposes.</description>
        <inlineHelpText>How many minutes does it take to complete this dashboard?</inlineHelpText>
        <label>SPM Effort</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>S3 Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Dashboard__c</columns>
        <columns>Report_Link__c</columns>
        <columns>SPM_Effort__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>S3 Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3 Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>